Implement state encoding and action space for Skip-Bo game AI
- Added `encoding.rs` to define state features and action encoding for the Skip-Bo game.
- Implemented `StateEncoder` for encoding game state into a feature vector.
- Created `ActionSpace` to map actions to indices and generate action masks.
- Developed `PolicyNetwork` in `policy.rs` for neural network architecture with configurable hidden layers and output size.
- Introduced `PolicyTrainer` and `PolicyDataset` in `training.rs` for managing training data and training loop.
- Added tests for action indexing, mask generation, and policy network functionality.
- Created integration tests in `ml.rs` to validate encoder output and bot action selection.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2024"
 rand = { version = "0.8", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
+bincode = "2"
+burn = { version = "0.19", default-features = false, features = ["std", "tui", "train", "vision", "wgpu", "fusion"] }
+burn-ndarray = { version = "0.19", features = ["std"] }
+burn-autodiff = "0.19"
+burn-train = { version = "0.19", features = ["tui", "sys-metrics"] }
+clap = { version = "4.5", features = ["derive"] }
