--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ burn-ndarray = { version = "0.19", features = ["std"] }
 burn-autodiff = "0.19"
 burn-train = { version = "0.19", features = ["tui", "sys-metrics"] }
 clap = { version = "4.5", features = ["derive"] }
+plotters = "0.3"
